--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>나의 첫 홈페이지</title>
+  <title>오정우의 첫 홈페이지</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>안녕하세요 👋</h1>
-    <p>이건 제가 만든 첫 홈페이지입니다!</p>
+    <p>제가 찍은 사진을 특별히 공개 합니다</p>
   </header>
 
   <section>
-    <h2>소개</h2>
-    <p>저는 웹 개발을 배우는 중이에요. 이 사이트는 HTML, CSS, JS로 만들었어요!</p>
+    <h2>사진을 감상해 보세요</h2>
+    <p>제가 찍은 사진들 입니다</p>
   </section>
 
   <footer>
-    <p>© 2025 My Website</p>
+    <p></p>
   </footer>
 </body>
 </html>
