--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>오정우의 첫 홈페이지</title>
+  <title>오정우의 사진</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,6 +12,9 @@
     <p>제가 찍은 사진을 특별히 공개 합니다</p>
   </header>
   <img src="1760502213384.jpg" alt="오창의 하늘" width="765" height="1020">
+  <br>
+  <br>
+  <img src="1760505902294.jpg" alt="10월 15일 오창의 하늘" width="765" height="1020">
   <section>
     <h2>사진을 감상해 보세요</h2>
     <p>제가 찍은 사진들 입니다</p>
