--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="1760505902294.jpg" alt="10월 15일 오창의 하늘" width="765" height="1020">
   <section>
     <h2>사진을 감상해 보세요</h2>
-    <p>제가 찍은 사진들 입니다</p>
+    <pre><p>  제가 찍은 사진들 입니다</p></pre>
   </section>
 
   <footer>
