--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>안녕하세요 오정우의 홈페이지 입니다👋</h1>
-    <p>제가 찍은 사진을 공개 합니다</p>
+    <h1><p style="white-space: nowrap;">
+         안녕하세요 오정우의 홈페이지 입니다👋
+     </p></h1>
+    <p><p style="white-space: nowrap;">
+         제가 찍은 사진들을 공개 합니다
+     </p></p>
   </header>
   <img src="1760502213384.jpg" alt="오창의 하늘" width="765" height="1020">
   <br>
