--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
   <header>
-    <h1><p style="white-space: nowrap;">
-         안녕하세요 오정우의 홈페이지 입니다👋
-     </p></h1>
-    <p><p style="white-space: nowrap;">
-         제가 찍은 사진들을 공개 합니다
-     </p></p>
+    <h1>안녕하세요 오정우의 홈페이지 입니다👋</h1>
+    <p>제가 찍은 사진들을 공개 합니다</p>
   </header>
   <img src="1760502213384.jpg" alt="오창의 하늘" width="765" height="1020">
   <br>
@@ -21,7 +17,7 @@
   <img src="1760505902294.jpg" alt="10월 15일 오창의 하늘" width="765" height="1020">
   <section>
     <h2>사진을 감상해 보세요</h2>
-    <pre><p>  제가 찍은 사진들 입니다</p></pre>
+    <h3>제가 찍은 사진들 입니다</h3>
   </section>
 
   <footer>
