--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>오정우의 사진</title>
   <link rel="stylesheet" href="style.css" />
+<style>
+  img {
+    width: 100%;
+    height: auto;
+  }
+</style>
 </head>
 <body>
   <header>
