--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
   <br>
   <br>
   <img src="1760505902294.jpg" alt="10월 15일 오창의 하늘" width="765" height="1020">
+<script>
+  let count = +localStorage.getItem('likeCount') || 0;
+  let liked = localStorage.getItem('liked') === 'true';
+  const btn = document.getElementById('btn');
+
+  function update() {
+    btn.textContent = `좋아요 ${count}` + (liked ? ' ❤️' : '');
+  }
+  update();
+
+  btn.onclick = () => {
+    liked = !liked;
+    count += liked ? 1 : -1;
+    localStorage.setItem('liked', liked);
+    localStorage.setItem('likeCount', count);
+    update();
+  };
+</script>
   <section>
     <h2>사진을 감상해 보세요</h2>
     <h3>제가 찍은 사진들 입니다</h3>
