--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
     <p>제가 찍은 사진들을 공개 합니다</p>
   </header>
   <img src="1760502213384.jpg" alt="오창의 하늘" width="765" height="1020">
+<script>
+  let count = +localStorage.getItem('likeCount') || 0;
+  let liked = localStorage.getItem('liked') === 'true';
+  const btn = document.getElementById('btn');
+
+  function update() {
+    btn.textContent = `좋아요 ${count}` + (liked ? ' ❤️' : '');
+  }
+  update();
+
+  btn.onclick = () => {
+    liked = !liked;
+    count += liked ? 1 : -1;
+    localStorage.setItem('liked', liked);
+    localStorage.setItem('likeCount', count);
+    update();
+  };
+</script>
   <br>
   <br>
   <img src="1760505902294.jpg" alt="10월 15일 오창의 하늘" width="765" height="1020">
